[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Enemy/flower-enemy/FlowerEnemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enemy/flower-enemy/Flo.dae" type="PackedScene" id=2]
[ext_resource path="res://Characters/Enemy/flower-enemy/phong1.material" type="Material" id=3]
[ext_resource path="res://Characters/Enemy/flower-enemy/AnimationPlayer.gd" type="Script" id=4]
[ext_resource path="res://Characters/Enemy/flower-enemy/BulletSpawn.gd" type="Script" id=5]
[ext_resource path="res://Characters/Enemy/flower-enemy/stoptime.gd" type="Script" id=6]
[ext_resource path="res://UI/HealthBar3D.tscn" type="PackedScene" id=7]

[sub_resource type="CylinderShape" id=1]
radius = 0.782304
height = 1.58652

[node name="Enemy" type="KinematicBody"]
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, 0 )
collision_layer = 1024
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.845573, 0 )
shape = SubResource( 1 )

[node name="Graphics" parent="." instance=ExtResource( 2 )]

[node name="Ch34" parent="Graphics/Skeleton" index="0"]
material/0 = ExtResource( 3 )

[node name="AnimationPlayer" parent="Graphics" index="1"]
script = ExtResource( 4 )

[node name="BulletSpawn" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CooldownTimer" type="Timer" parent="BulletSpawn"]
wait_time = 3.0
one_shot = true

[node name="bulletStart" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.03116e-008, 1.16859, 1.03304 )

[node name="stoptime" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
script = ExtResource( 6 )

[node name="HealthBar3D" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0 )
[connection signal="animation_finished" from="Graphics/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BulletSpawn/CooldownTimer" to="stoptime" method="_on_CooldownTimer_timeout"]

[editable path="Graphics"]
